k8s/traefik/beszel.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beszel
  namespace: default
spec:
  ingressClassName: traefik
  tls:
    - secretName: wildcard-tls
  rules:
    - host: beszel.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beszel
                port:
                  number: 8090
